# recordkeeper

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  flag-icons-ff9976619145030.css  index-5425accaa37d9988.css  index.html  override-770b5a77f2ae864a.css  webapp-49cb96666277ebfa.js
app-builder/: Cargo.toml
app-builder/res/: flags.json  formation_colors.json
app-builder/src/: character.rs  enemy.rs  enhance.rs  field.rs  formation.rs  gimmick.rs  item.rs  lang.rs  main.rs  manual.rs  npc.rs  ouroboros.rs  quest.rs  scenario.rs
app-builder/src/dlc/: challenge.rs  community.rs  map.rs  masha.rs  mod.rs  pedia.rs  pow_augment.rs
app-builder/src/util/: sort_key.rs
data-model/: Cargo.toml
data-model/src/: lib.rs
game-data/: Cargo.toml
game-data/src/: character.rs  enemy.rs  enhance.rs  field.rs  formation.rs  item.rs  lang.rs  lib.rs  manual.rs  npc.rs  ouroboros.rs  quest.rs  scenario.rs
game-data/src/dlc/: challenge.rs  community.rs  map.rs  masha.rs  mod.rs  pedia.rs  pow_augment.rs
lib/: Cargo.toml
lib/src/: error.rs  io.rs  lib.rs  util.rs
lib/src/io/: mod.rs
lib/src/save/: character.rs  dlc.rs  enemy.rs  field.rs  flags.rs  item.rs  menu.rs  mod.rs  stats.rs  time.rs
lib/src/save/character/: class.rs  formation.rs  mod.rs  slot.rs
lib/src/save/chrono/: amiibo.rs  mod.rs
lib/src/save/dlc/: challenge.rs  dlc4.rs  gauntlet.rs  masha.rs  mod.rs
lib/src/save/field/: colony.rs  map.rs  mod.rs
lib/src/save/item/: edit.rs  mod.rs
lib/src/save/npc/: mod.rs  talk.rs
lib/src/system/: mod.rs
lib/tests/: system.rs  write_back.rs
lib/tests/res/: save-ch5-v10.sav  system.sav
macros/: Cargo.toml
macros/src/: lib.rs  save_bin.rs
pattern-exporter/: Cargo.toml
pattern-exporter/src/: imhex.rs  main.rs
webapp/: .gitignore  Cargo.toml  build.rs  index.html
webapp/assets/: card.scss  colors.cmn.scss  colors.dark.scss  fonts.scss  index.sass  index.scss  modal.scss  override.css  select.scss  sidebar.scss
webapp/lang/: de.ftl  en_us.ftl  es.ftl  fr.ftl  lang.json  zh-Hant.ftl
webapp/src/: app.rs  data.rs  dialog.rs  lang.rs  main.rs  save.rs  util.rs
webapp/src/components/: edit.rs  mod.rs  nav.rs  page.rs  select.rs  sidebar.rs  upload.rs
webapp/src/components/character/: appearance.rs  class.rs  formation.rs  mod.rs  party.rs  slot.rs  stats.rs  util.rs
webapp/src/components/dlc/: challenge.rs  community.rs  gauntlet.rs  map.rs  masha.rs  mod.rs  pow_augment.rs
webapp/src/components/dlc/gauntlet/: emblem.rs  mod.rs  records.rs  state.rs
webapp/src/components/enemy/: mod.rs  records.rs  soul_hack.rs
webapp/src/components/field/: env.rs  location.rs  mod.rs  player.rs
webapp/src/components/item/: edit.rs  mod.rs
webapp/src/components/meta/: misc.rs  mod.rs  scenario.rs  time.rs
webapp/src/components/ouroboros/: mod.rs  tree.rs
webapp/src/components/quest/: mod.rs  purpose.rs
webapp/src/components/select/: mod.rs  search.rs  update.rs
webapp/src/routes/: about.rs  character.rs  chrono.rs  enemy.rs  field.rs  flags.rs  formation.rs  home.rs  item.rs  meta.rs  mod.rs  ouroboros.rs  quest.rs
webapp/src/routes/dlc/: challenge.rs  community.rs  gauntlet.rs  map.rs  mod.rs  pedia.rs  pow_augment.rs
