[package]
name = "recordkeeper"
authors = ["RoccoDev <hey@rocco.dev>"]
license = "LGPL-3.0-only"
version = "0.1.0"
edition = "2021"

[features]
strum = ["dep:strum"]
# Enables serialization of map bitmaps (used for the fog-of-war mechanic).
# This adds an extra ~1MB to the save structure size in memory.
map-bitmaps = []

[dependencies]
recordkeeper-macros = { path = "../macros" }
byteorder = "1.4.3"
thiserror = "1.0.44"
paste = "1.0.14"
strum = { version = "0.25.0", features = ["derive"], optional = true }