[package]
name = "recordkeeper-macros"
version = "0.1.0"
description = "Derive macros for recordkeeper. (For internal use)"
authors = ["RoccoDev <hey@rocco.dev>"]
license = "LGPL-3.0-only"
edition = "2021"
categories = ["parsing", "parser-implementations"]
keywords = ["xenoblade", "save-edit", "monolithsoft"]
repository = "https://github.com/RoccoDev/recordkeeper/tree/master/macros"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.27"
quote = "1.0.8"
proc-macro2 = "1.0"