[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
recordkeeper = { path = "../lib" }
game-data = { path = "../game-data" }
yew = { version = "0.20", features = ["csr"] }
ybc = "0.4.0"
yew-feather = "1.0"
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }
web-sys = { version = "0.3.64", default-features = false, features = ["FileList", "File", "HtmlInputElement"] }
js-sys = "0.3.64"
gloo = "0.3"
yew-router = "0.17"
wasm-bindgen = "0.2"