[package]
name = "webapp"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
recordkeeper = { path = "../lib", features = ["strum"] }
game-data = { path = "../game-data" }
yew = { version = "0.20", features = ["csr"] }
ybc = "0.4.0"
yew-feather = "1.0"
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }
web-sys = { version = "0.3.64", default-features = false, features = [
    "FileList", 
    "File", 
    "HtmlInputElement", 
    "HtmlAnchorElement",
    "Document",
    "Window"
] }
js-sys = "0.3.64"
gloo = "0.9.0"
gloo-net = "0.4.0"
gloo-storage = "0.3.0"
yew-router = "0.17"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
log = "0.4.19"
wasm-logger = "0.2.0"
anyhow = "1.0.72"
strum = { version = "0.25.0", features = ["derive"] }
git-version = "0.3.5"
serde = "1"
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 's'